--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,99 +1,57 @@
 html, body {
     display: block;
-    background-color: #4d4d4d;
-    font-family: 'Archivo', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 body {
-    position: absolute;
     display: block;
-    margin-left: 15%;
-    margin-right: 15%;
-    padding: 30px;
-    background: #142634;
-    color: #E5E5E5;
+    margin: 0;
+    margin-left: 12%;
+    margin-right: 12%;
 }
 
-section {
+#page-container {
     position: relative;
+    min-height: 100vh;
 }
 
 header {
-    display: inline;
-    padding-top: 30pt;
+  padding-top: 2rem;
 }
 
-a {
-    color: #E5E5E5;
-    overflow: hidden;
+header h1 {
+    display: inline;
+    position: relative;
+}
+
+.contact ul {
+    padding-left: 1em;
+}
+
+.contact ul li {
+    display: block;
+    list-style-type: none;
+    margin: 0;
+    margin-bottom: 1em;
+}
+
+.contact ul a {
+    color: #030303;
     text-decoration: none;
 }
 
-header span a {
-    font-size: 1.7em;
-    letter-spacing: 2pt;
-}
-
-nav {
-    position: sticky;
-    display: inherit;
-    float: right;
-    z-index: 1;
-    -moz-user-select: -moz-none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-}
-
-nav ul {
-    border-bottom: 1px solid #778;
-}
-
-nav ul li {
-    list-style: none;
-    margin: 0;
-    display: inline;
-}
-
-nav ul li a {
-    padding: 0.2em 1em;
-    margin: 10px;
-    border: 1px solid #778;
-    border-bottom: none;
-    background: #221;
-    text-decoration: none;
-}
-
-nav ul li a:hover {
-    background-color: #4d4d4d;
-}
-
-.content {
-    margin: 0;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-
-.content h1 {
-    padding-top: 10%;
-    letter-spacing: 6pt;
-    font-size: 4em;
-    text-align: center;
-}
-
-.content h2 {
-    font-size: 2em;
-}
-
-.content p {
-    font-size: 1.2em;
+.contact ul a:hover {
+    color: #030303;
+    text-decoration: underline;
 }
 
 footer {
-    display: block;
-    position: relative;
-    margin-top: 20em;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
 }
 
 @font-face {
-    font-family: 'Archivo', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
