--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: 'Ubuntu', sans-serif;
+}
+
+:root {
+    --primary-font-color: #f2f3f5;
+    --secondary-font-color: #1012B6;
+    --tertiary-font-color: #ed8829;
+    --home-back-color: #f2686a;
+    --about-back-color: #7c14eb;
+    --contact-back-color: #5f9e1b;
+}
+
 html, body {
     display: block;
     font-family: 'Ubuntu', sans-serif;
@@ -6,52 +19,117 @@ html, body {
 body {
     display: block;
     margin: 0;
-    margin-left: 12%;
-    margin-right: 12%;
+    color: var(--primary-font-color);
 }
 
-#page-container {
-    position: relative;
-    min-height: 100vh;
-}
-
-header {
-  padding-top: 2rem;
+/* header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding-top: 2rem;
 }
 
 header h1 {
     display: inline;
     position: relative;
+    margin: 1rem;
+    margin-bottom: 0;
 }
 
-.contact ul {
+header nav {
+    font-size: 1.3rem;
+}
+
+header nav a {
+    margin: 1rem;
+} */
+
+h1 {
+    font-size: 48px;
+}
+
+h2 {
+    font-size: 40px;
+    margin: 2rem 1rem 0.5rem 1rem;
+}
+
+a {
+    color: var(--primary-font-color);
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--tertiary-font-color);
+}
+
+.page-container {
+    width: 100%;
+    min-height: 100vh;
+}
+
+.home-container, .about-container, .contact-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    position: relative;
+    min-height: 80vh;
+    margin: 0 12% 0 12%;
+}
+
+#home {
+    background-color: var(--home-back-color);
+}
+
+#about {
+    background-color: var(--about-back-color);
+}
+
+#contact {
+    background-color: var(--contact-back-color);
+}
+
+.contact-container ul {
     padding-left: 1em;
+    margin-left: 1rem;
 }
 
-.contact ul li {
+.contact-container ul li {
     display: block;
     list-style-type: none;
     margin: 0;
     margin-bottom: 1em;
 }
 
-.contact ul a {
-    color: #030303;
-    text-decoration: none;
+.highlight {
+    color: var(--secondary-font-color);
 }
 
-.contact ul a:hover {
-    color: #030303;
-    text-decoration: underline;
+.info {
+    margin: 0rem 1rem 2rem 1rem;
 }
 
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;
+.info p, .info-desc p {
+    margin: 0.5rem 0 0.5rem;
 }
 
-@font-face {
-    font-family: 'Ubuntu', sans-serif;
+.info p {
+    font-size: 24px;
 }
+
+.info-desc p {
+    font-size: 20px;
+}
+
+.info-desc {
+    margin: 1rem;
+}
+
+.flavor-text {
+    margin-top: 2rem;
+}
+
+.flavor-text p {
+    font-size: 14px;
+}
+
