--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,51 @@
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?1nchso');
+  src:  url('fonts/icomoon.eot?1nchso#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?1nchso') format('truetype'),
+    url('fonts/icomoon.woff?1nchso') format('woff'),
+    url('fonts/icomoon.svg?1nchso#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-medium:before {
+  content: "\e900";
+  font-size: 32px;
+}
+.icon-profile:before {
+  content: "\e923";
+  font-size: 32px;
+}
+.icon-envelop:before {
+  content: "\e945";
+  font-size: 32px;
+}
+.icon-github:before {
+  content: "\eab0";
+  font-size: 32px;
+}
+.icon-linkedin:before {
+  content: "\eac9";
+  font-size: 32px;
+}
+
 :root {
     --primary-font-color: #f2f3f5;
     --secondary-font-color: #364697;
