--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,15 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.svg-def {
-    width: 0;
-    height: 0;
-}
-
 :root {
     --primary-font-color: #f2f3f5;
     --secondary-font-color: #f2686a;
-    --tertiary-font-color: #f2686a;
     --home-back-color: #140f0f;
     --shadow-color: #2d2c2f;
 }
@@ -72,7 +66,7 @@ a {
 }
 
 a:hover {
-    color: var(--tertiary-font-color);
+    color: var(--secondary-font-color);
 }
 
 .page-container {
