--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,6 +66,7 @@ a {
 
 a:hover {
     color: var(--secondary-font-color);
+    cursor: pointer;
 }
 
 .page-container {
@@ -87,20 +88,6 @@ a:hover {
 
 .resume-container {
     min-height: 100vh;
-}
-
-ul {
-    display: flex;
-    justify-content: space-between;
-    padding-left: 0;
-    margin-left: 1rem;
-}
-
-ul li {
-    display: block;
-    list-style-type: none;
-    margin: 0;
-    margin-right: 1.25rem;
 }
 
 p, a {
@@ -130,10 +117,37 @@ p, a {
     font-size: 40px;
 }
 
-.calendar, .resume {
+.page-container > div {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.page-container > div p {
+    margin: 0 5rem;
+}
+
+.data-mining {
+    width: 80vw;
+}
+
+.data-mining p {
+    text-align: left;
+    width: 70vw;
+}
+
+.data-mining li {
+    margin-bottom: 5px;
+}
+
+.data-mining #instructions {
+    font-size: 15px;
+    font-style: italic;
+    color: black;
+    background-color: whitesmoke;
+    padding: 10px;
+    margin: 0 5rem;
+    border: 5px solid gainsboro;
 }
 
 iframe {
