--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,6 +86,20 @@ a:hover {
     margin: 0 12% 0 12%;
 }
 
+.home-container ul {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 0;
+    margin-left: 1rem;
+}
+
+.home-container ul li {
+    display: block;
+    list-style-type: none;
+    margin: 0;
+    margin-right: 1.25rem;
+}
+
 .resume-container {
     min-height: 100vh;
 }
@@ -117,13 +131,13 @@ p, a {
     font-size: 40px;
 }
 
-.page-container > div {
+.calendar, .resume, .data-mining {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.page-container > div p {
+.calendar p, .resume p, .data-mining p {
     margin: 0 5rem;
 }
 
